fix: wrong colors of dropdown menu items if it is a not visited link

--- a/src/styles/_boilerplate.scss
+++ b/src/styles/_boilerplate.scss
@@ -26,11 +26,13 @@ option {
 }
 
 a {
-  color: var(--color-text-link);
+  color: var(--color-text-normal);
   text-decoration: none;
+
   &:hover {
     color: var(--color-text-normal);
   }
+
   &:visited {
     color: var(--color-text-normal);
   }
